code/dotnet/CompanyLogo/v5/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo client library for .NET

[![API Version](https://img.shields.io/badge/api-v5.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Nuget](https://img.shields.io/badge/nuget-v0.41.0-orange)](https://www.nuget.org/packages/FactSet.SDK.CompanyLogo/0.41.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet collected company logos through an API that seamlessly integrates with company fundamentals and estimates data
(listed equities data available via the stocks API), quotes, time series, and other Digital APIs.

The Company Logo API provides access to logos for a global universe of listed companies. The logos can be accessed by using national and
international identifiers like ISIN, CUSIP, WKN, Valor, etc. and are a nice feature for comprehensive visualizations of equities
on overview pages (factsheets).

Logo collection and maintenance takes into account IPOs, M&A notifications, and further consistency check mechanisms.

The Company Logo API seamlessly integrates with the [Stocks API](https://developer.factset.com/api-catalog/stocks-api-digital-portals)
for equities and estimates data and the [Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api), allowing
access to detailed price and performance information of listings. The [Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api)
also supports basic security identifier cross-reference.
For direct access to price histories for charting, please refer to the
[Real-Time Time Series API](https://developer.factset.com/api-catalog/real-time-time-series-api).
 


This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 5.0.0
- SDK version: 0.41.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.CompanyLogo -v 0.41.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.CompanyLogo -Version 0.41.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.CompanyLogo.Api;
using FactSet.SDK.CompanyLogo.Client;
using FactSet.SDK.CompanyLogo.Model;

namespace Example
{
    public static class PostCompanyLogoExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.CompanyLogo.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new CompanyLogosApi(config);
            var postCompanyLogoRequest = new PostCompanyLogoRequest(); // PostCompanyLogoRequest | Request Body (optional) 

            try
            {
                // Retrieves logos for one or more publicly traded companies.
                InlineResponse200 result = apiInstance.PostCompanyLogo(postCompanyLogoRequest);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling CompanyLogosApi.PostCompanyLogo: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/company-logo/v5*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CompanyLogosApi* | [**PostCompanyLogo**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/CompanyLogosApi.md#postcompanylogo) | **POST** /logo/list | Retrieves logos for one or more publicly traded companies.


## Documentation for Models

 - [Model.CompanyLogoItemObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/CompanyLogoItemObject.md)
 - [Model.CompanyLogoObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/CompanyLogoObject.md)
 - [Model.ErrorDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/ErrorDetail.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/ErrorResponse.md)
 - [Model.ErrorResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/ErrorResponseMeta.md)
 - [Model.ErrorResponseMetaStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/ErrorResponseMetaStatus.md)
 - [Model.InlineResponse200](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/InlineResponse200.md)
 - [Model.InlineResponse200Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/InlineResponse200Meta.md)
 - [Model.PostCompanyLogoRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequest.md)
 - [Model.PostCompanyLogoRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequestData.md)
 - [Model.PostCompanyLogoRequestDataIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequestDataIdentifier.md)
 - [Model.PostCompanyLogoRequestDataSize](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequestDataSize.md)
 - [Model.PostCompanyLogoRequestDataSizeCustom](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequestDataSizeCustom.md)
 - [Model.PostCompanyLogoRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/PostCompanyLogoRequestMeta.md)
 - [Model.StatusObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogo/v5/docs/StatusObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
